prusti-tests/tests/verify/ui/counterexamples/pure-sum-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure-sum-2.rs:16:11
   |
16 | #[ensures(sum(5) == 0)]
   |           ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure-sum-2.rs:17:1
   |
17 | fn test1() {}
   | ^^^^^^^^^^^^^
note: counterexample for result
        final value:   ?
  --> $DIR/pure-sum-2.rs:17:12
   |
17 | fn test1() {}
   |            ^

error: aborting due to previous error

